# declarative-env

./: Cargo.toml  README.md
src/: accepted_rust_type.rs  declarative_env_generator.rs  empty_struct.rs  lib.rs  macro_config.rs  variable_declarations.rs
tests/: example.hjson  macro_tests.rs
tests/01-basic-load/: main.rs  spec.hjson
