[package]
name = "declarative-env"
version = "0.1.1"
edition = "2021"
description = "This crate parses and populates a struct with the environmental variables defined in a file, for having the documentation and the code always synchronized."
license = "MPL-2.0"
repository = "https://github.com/asperan/declarative-env"

[lib]
proc-macro = true

[dependencies]
deser-hjson = "2.2.4"
hierrorchy = "0.2.0"
proc-macro2 = { version = "1.0.101", features = ["proc-macro", "span-locations"] }
quote = "1.0.40"
serde = "1.0.219"
syn = "2.0.106"

[dev-dependencies]
hierrorchy = "0.2.0"
string_sequence_tester = "0.1.0"
temp-env = "0.3.6"
